Server/public/styles.css
/* ... */
.carousel::after {
    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
}

.MLPic {
    background-size: 20%;
    width: 100%;
    height: 100%;

}

/* End carousel */

#footerSlideContainer {
    /* position: fixed; */
    bottom: 0;
    width: 100%;
    overflow: scroll;
}

#footerSlideButton {
    height: 25px;
    top: 0;
    padding: 25px;
    z-index: 1;

    opacity: 0;
    line-height: 0;
    width: center;
    background-color: rgb(145 145 145 / 39%);
    text-align: center;
    position: absolute;
    width: 100%;
    margin: auto;
    border: 1px solid white;
    cursor: pointer;
}

#footerSlideButton:hover {
    background-color: black;
    opacity: 1;
    text-shadow: 0px 0px 1px white, 1px 0px 15px white, 0px -1px 1px white, 1px -1px 15px white;

}

#footerSlideContent {
    width: 100%;
    height: 0px;
    background-image: linear-gradient(rgba(53, 67, 87, 0.9), rgba(255, 255, 255, 0));
    color: #CCCCCC;
    border: none;
    font-family: DejaVuSansBook, Sans-Serif;
    text-shadow: 0px 0px 3px black, 1px 0px 3px black, 0px 1px 3px black, -1px 0px 3px black, 0px -1px 3px black, 1px -1px 3px black;

}

#footerSlideText {
    background-color: rgba(55, 55, 55, .2);
}

#moreAboutML {
    font-size: 20px;
    overflow: scroll;
    padding: 50px;
    /* background-color:rgba(55,55,55,.2); */
    background-image: linear-gradient(rgba(53, 67, 87, 0.9), rgba(255, 255, 255, 0));

}

#moreAboutML1 {
    font-size: 20px;
    overflow: scroll;
    padding: 50px;
    /* background-color:rgba(55,55,55,.2); */
    background-image: linear-gradient(rgba(53, 67, 87, 0.9), rgba(255, 255, 255, 0));

}

#moreAboutML11 {
    font-size: 20px;
    overflow: scroll;
    padding: 50px;
    /* background-color:rgba(55,55,55,.2); */
    background-image: linear-gradient(rgba(53, 67, 87, 0.9), rgba(255, 255, 255, 0));

}

.hrClass {
    clear: both;
    position: relative;
    top: 25px;
}

.MLvideo {
    text-align: center;
    width: 100%;
}

.MLvideo iframe {
    text-align: center;
    width: 100%;
    height: 300px;
}

#threeMoreContainer {
    /* display:flex; */
}

#threeMoreContainer div {
    /* border:1px solid white; */
    /* border-bottom:1px solid white; */
    border-top: 1px solid white;

}

.additional {
    text-align: center;
}

.moreExamples {
    clear: both;
}

.moreExamples div:first-child {
    background-image: url('../public/images/calculator.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-attachment: fixed;

    margin-top: 300px;
}

.moreExamples div:last-child {
    background-image: url('../public/images/todo.png');
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;

    /* background-attachment: fixed; */

}

.moreExamples img {
    clear: both;
    /* width: 300px; */
    height: 550px;
}

.myVideo {
    width:90%;
    height:auto;
}
 video {
    border:2px solid rgb(52, 50, 50);
    box-shadow: 0px 0px 25px antiquewhite;
    border-radius: 5px;

}
/* end main */

/* footer */


#toTop,
.toTopFooter {
    color: white;
    text-shadow: 0px 0px 1px white, 1px 0px 15px white, 0px -1px 1px white, 1px -1px 15px white;
}

#toTop:hover,
.toTopFooter:hover {
    text-shadow: 0px 0px 25px white, 1px 0px 25px white, 0px -1px 25px white, 1px -1px 25px white;
}

header:hover a {
    text-shadow: 0px 0px 1px white, 1px 0px 15px white, 0px -1px 1px white, 1px -1px 15px white;
}

header:hover a:hover {
    text-shadow: 0px 0px 25px white, 1px 0px 25px white, 0px -1px 25px white, 1px -1px 25px white;

}

#toTop::before {
    transform: scaleX(0);
    transform-origin: bottom right;
}

#toTop:hover::before {
    transform: scaleX(1);
    transform-origin: bottom left;
}

#toTop::before {
    content: " ";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    inset: 0 0 0 0;
    /* background: rgba(143, 212, 218,.5); */
    background-image: linear-gradient(rgba(66, 102, 149, 0.9), rgba(255, 255, 255, .4));
    z-index: -1;
    transition: transform .6s ease-out;
}

.toTopFooter {
    color: white;
    font-size: 20px;
}

@media (orientation: landscape) {
    body {
        grid-auto-flow: column;
    }
}

/* end footer */
.footer {
    clear: both;
    float: left;
    z-index: 1;
    /* padding-bottom:500px; */
}



nav a:nth-child(1) {
    animation: wiggle 2s linear infinite;

}

/* Keyframes */
@keyframes wiggle {

    0%,
    7% {
        transform: rotateZ(0);
    }

    15% {
        transform: rotateZ(-15deg);
    }

    20% {
        transform: rotateZ(10deg);
    }

    25% {
        transform: rotateZ(-10deg);
    }

    30% {
        transform: rotateZ(6deg);
    }

    35% {
        transform: rotateZ(-4deg);
    }

    40%,
    100% {
        transform: rotateZ(0);
    }
}


nav a:nth-child(1) {
    float: right;
    margin-left: 5px;

}

nav a:nth-child(2) {
    animation: wiggle 2s linear infinite;
    animation-delay: .5s;
}

/* Keyframes */
@keyframes wiggle {

    0%,
    7% {
        transform: rotateZ(0);
    }

    15% {
        transform: rotateZ(-15deg);
    }

    20% {
        transform: rotateZ(10deg);
    }

    25% {
        transform: rotateZ(-10deg);
    }

    30% {
        transform: rotateZ(6deg);
    }

    35% {
        transform: rotateZ(-4deg);
    }

    40%,
    100% {
        transform: rotateZ(0);
    }
}


nav a:nth-child(2) {
    float: right;
    margin-left: 5px;

}

nav a:nth-child(3) {
    animation: wiggle 2s linear infinite;
    animation-delay: 1s;
}
/* ... */

